add 'Contacts' period

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
               <a class="nav__link">About</a>
             </li>
             <li>
-              <a class="nav__link">Contacts</a>
+              <a class="nav__link">Contacts.</a>
             </li>
           </ul>
         </nav>
