--- a/index.html
+++ b/index.html
@@ -318,18 +318,26 @@
             <h4 class="footer__column-heading">Social Media</h4>
             <ul class="footer__list">
               <li class="footer__list-item">
-                <a href="#">
+                <a
+                  href="https://www.facebook.com/PracticumUSA/"
+                  class="footer__column-link"
+                >
                   <img
                     src="./images/facebook_white.svg"
                     alt="facebook logo"
+                    class="footer__social-icon"
                   />Facebook
                 </a>
               </li>
               <li class="footer__list-item">
-                <a href="#">
+                <a
+                  href="https://www.instagram.com/practicum.usa/?hl=en"
+                  class="footer__column-link"
+                >
                   <img
                     src="./images/instagram_white.svg"
                     alt="instagram logo"
+                    class="footer__social-icon"
                   />Instagram
                 </a>
               </li>
