--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
               <a class="nav__link" href="#about">About</a>
             </li>
             <li>
-              <a class="nav__link" href="#about">Contacts</a>
+              <a class="nav__link" href="#footer">Contacts</a>
             </li>
           </ul>
         </nav>
@@ -292,7 +292,7 @@
           <div class="about__circle"></div>
         </section>
       </main>
-      <footer class="footer" id="about">
+      <footer class="footer" id="footer">
         <div class="footer__columns">
           <div class="footer__column">
             <img
